# kube-node-label-global-ips

./: Cargo.toml  README.md  project.bri
.github/workflows/: publish.yml
src/: main.rs
