[package]
name = "kube-node-annotate-ips"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
humantime = "2.3.0"
ip_rfc = "0.1.0"
joinery = "3.1.0"
k8s-openapi = { version = "0.26.0", features = ["latest"] }
kube = "2.0.1"
miette = "7.6.0"
network-interface = "2.0.3"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
